kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomize-demo
  labels:
    app: kustomize-demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: kustomize-demo
